# volbear-scripts

./: .gitignore  README.md  full_atmosphere.py  mai_only.py  pyproject.toml
output/: README.md
volbear/: __init__.py  chemical_network.py  equil_mai.py  interior_structure_model.py  nat_const.py  param_space.py  phaethon_coupling.py  utility.py  volatiles.py
volbear/data/: chem_network.yaml  sun_gueymard_2003_modified.txt
